added utils API page to connect front and backend data

--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "mern",
+  "name": "gardenista",
   "version": "0.1.0",
-  "description": "Mern Demo",
+  "description": "Gardentista",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "axios": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
