--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "react-bootstrap": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
