--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@babel/parser": "*",
     "axios": "^0.18.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.5.2",
